# PL-event-calibrator

./: README.md  outputs_calibrated.csv  pyproject.toml
data/: sample_matches.csv
features/: market_trends.py
src/pl_calibrator/: __init__.py  cli.py  data.py  features.py  model.py  regime.py
tests/: test_smoke.py
