[project]
name = "pl-event-calibrator"
version = "0.1.0"
description = "Premier League event probability calibration with regime-aware adjustment."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.26",
  "scikit-learn>=1.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
